<resources>
    <string name="app_name">Task_1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_your_colleagues">Search your colleagues</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <string name="apply_leave_icon_description">Apply leave icon</string>
    <string name="raise_ticket_icon_description">Raise Ticket icon</string>
    <string name="raise_expense_icon_description">Raise Expense icon</string>
    <string name="leave_balance_icon_description">Leave Balance icon</string>
    <string name="apply_leave_text">Apply\nLeave</string>
    <string name="raise_ticket_text">Raise\nTicket</string>
    <string name="raise_expense_text">Raise\nExpense</string>
    <string name="leave_balance_text">Leave\nBalance</string>
    <string name="shift_today_text">SHIFT TODAY :</string>
    <string name="date_text">30 Jan</string>
    <string name="effective_working_hours">3h / 8h</string>
    <string name="allotted_shift_text">GENERAL (9:00 AM - 06:00 PM)</string>
    <string name="day_text">Tuesday</string>
    <string name="off_this_week_text">Off this week</string>
    <string name="employee_name">Person</string>
    <string name="wish_them_text">Wish them</string>
    <string name="announcements_heading">Announcements</string>
    <string name="all_announcements">See all announcements</string>
    <string name="announcement_employee_name">Sri Vaishnavi Bhogadi made an\nannoucement</string>
    <string name="announcement_date">30 Jan</string>
    <string name="announcement_subject">Availing Transport Facilities for Keka\nJosh</string>
    <string name="announcement_body">Hello everyone,\n\n We are thrilled to announcement that for our\nupcoming Keka Josh event,the company will be providing transportation facilities to take the hassle out of your journey! you can now focus on having a blast without worrying about how to get there or back.</string>
    <string name="tab_time">Time</string>
    <string name="tab_finance">Finances</string>
    <string name="tab_performance">Performance</string>
    <string name="tab_helpdesk">Helpdesk</string>
    <string name="attendance_text">Attendance</string>
    <string name="logs_shifts_heading">Logs and shifts</string>
    <string name="request_history_heading">Request History</string>
    <string name="logs_shifts_body">View all attendance logs\nhere</string>
    <string name="request_history_body">View history for\nattendance requests</string>
    <string name="leave">Leave</string>
    <string name="apply_leave_heading">Apply Leave</string>
    <string name="apply_leave_body">Apply for your next\nleave here</string>

    <string name="leave_balance_heading">Leave Balance</string>
    <string name="leave_balance_body">View your leave\nbalances, history and\ntransactions</string>

    <string name="comp_off_heading">Comp off</string>
    <string name="comp_off_body">Request for comp off\nview comp off history</string>

    <string name="personal_feedback_heading">Personal Feedback</string>
    <string name="personal_feedback_body">Give feedback and\nfoster a culture of\ncontinuous learning</string>

    <string name="praise_heading">Praise</string>
    <string name="praise_body">Take a moment to\nappreciate your peers achievements</string>


    <string name="options_heading">Options</string>

    <string name="ticket_history_heading">Ticket history</string>
    <string name="ticket_history_body">Track your tickets\'\nstatus here</string>

    <string name="following_heading">Following</string>
    <string name="following_body">Tickets you\'re following,\nStay updated here</string>


    <string name="raise_help_desk_ticket">Raise a Helpdesk Ticket</string>
</resources>