<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/quick_assist_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ApplyLeaveIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/circular_background_2"
                android:contentDescription="@string/apply_leave_icon_description"
                android:src="@drawable/ic_baseline_flight_takeoff_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ApplyLeaveText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/apply_leave_text"
                app:layout_constraintEnd_toEndOf="@+id/ApplyLeaveIcon"
                app:layout_constraintStart_toStartOf="@+id/ApplyLeaveIcon"
                app:layout_constraintTop_toBottomOf="@+id/ApplyLeaveIcon" />

            <ImageView
                android:id="@+id/RaiseTicketIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/circular_background_2"
                android:contentDescription="@string/raise_ticket_icon_description"
                android:src="@drawable/ic_baseline_panorama_vertical_24"
                app:layout_constraintStart_toEndOf="@+id/ApplyLeaveIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/RaiseTicketText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/raise_ticket_text"
                app:layout_constraintEnd_toEndOf="@+id/RaiseTicketIcon"
                app:layout_constraintStart_toStartOf="@+id/RaiseTicketIcon"
                app:layout_constraintTop_toBottomOf="@+id/RaiseTicketIcon" />

            <ImageView
                android:id="@+id/RaiseExpenseIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/circular_background_2"
                android:contentDescription="@string/raise_expense_icon_description"
                android:src="@drawable/ic_baseline_price_check_24"
                app:layout_constraintStart_toEndOf="@+id/RaiseTicketIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/RaiseExpenseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/raise_expense_text"
                app:layout_constraintEnd_toEndOf="@+id/RaiseExpenseIcon"
                app:layout_constraintStart_toStartOf="@+id/RaiseExpenseIcon"
                app:layout_constraintTop_toBottomOf="@+id/RaiseExpenseIcon" />

            <ImageView
                android:id="@+id/LeaveBalanceIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/circular_background_2"
                android:contentDescription="@string/leave_balance_icon_description"
                android:src="@drawable/ic_baseline_dataset_24"
                app:layout_constraintStart_toEndOf="@+id/RaiseExpenseIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/LeaveBalanceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/leave_balance_text"
                app:layout_constraintEnd_toEndOf="@+id/LeaveBalanceIcon"
                app:layout_constraintStart_toStartOf="@+id/LeaveBalanceIcon"
                app:layout_constraintTop_toBottomOf="@+id/LeaveBalanceIcon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/schedule_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/quick_assist_layout">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/secondaryColor"
                app:cardCornerRadius="10dp"
                app:cardMaxElevation="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/shift_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/black"
                        android:text="@string/allotted_shift_text"
                        app:layout_constraintStart_toEndOf="@+id/shift_today_text"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/shift_today_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/black"
                        android:text="@string/shift_today_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/shift_today_icon"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/circular_background_3"
                        android:src="@drawable/ic_baseline_dataset_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/shift_today_text"
                        android:contentDescription="@string/shift_today_text"/>

                    <TextView
                        android:id="@+id/date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/date_text"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toEndOf="@+id/shift_today_icon"
                        app:layout_constraintTop_toBottomOf="@+id/shift_today_text" />

                    <TextView
                        android:id="@+id/day_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/black"
                        android:text="@string/day_text"
                        app:layout_constraintStart_toEndOf="@+id/date_text"
                        app:layout_constraintTop_toBottomOf="@+id/shift_text" />

                    <TextView
                        android:id="@+id/effective_hours_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/black"
                        android:text="@string/effective_working_hours"
                        app:layout_constraintStart_toEndOf="@+id/shift_today_icon"
                        app:layout_constraintTop_toBottomOf="@+id/date_text" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/off_this_week_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/schedule_layout">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/image_recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView18" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/off_this_week_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/wish_them_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/off_this_week_layout">


            <TextView
                android:id="@+id/off_this_week_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/wish_them_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/wish_them_recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/off_this_week_heading" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/announcements_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wish_them_layout">

            <TextView
                android:id="@+id/announcement_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/announcements_heading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:elevation="5dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/secondaryColor">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/announcement_card_header"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/annoucement_employee_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/ic_baseline_person_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/announcement_employee_name"/>

                    <TextView
                        android:id="@+id/announcement_employee_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/black"
                        android:text="@string/announcement_employee_name"
                        app:layout_constraintStart_toEndOf="@+id/annoucement_employee_image"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/announcement_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/black"
                        android:text="@string/announcement_date"
                        app:layout_constraintStart_toEndOf="@+id/annoucement_employee_image"
                        app:layout_constraintTop_toBottomOf="@+id/announcement_employee_name" />

                    <TextView
                        android:id="@+id/announcement_subject"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/announcement_subject"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/annoucement_employee_image" />

                    <TextView
                        android:id="@+id/annoucement_body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/announcement_body"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/announcement_subject" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/holidays_layout"
            app:layout_constraintTop_toBottomOf="@+id/announcements_layout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </TextView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>